--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -1074,6 +1074,412 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 2.1 Standardizing the data\n",
+    "As a rule of thumb, standardizing our training data should be a part of the preprocessing before any predictive modelling/analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 258 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>STG</th><th scope=col>PEG</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl[,1]&gt;</th><th scope=col>&lt;dbl[,1]&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>-1.765089</td><td>-1.796705</td></tr>\n",
+       "\t<tr><td>-1.384627</td><td> 1.729790</td></tr>\n",
+       "\t<tr><td>-1.479743</td><td>-0.503657</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>0.8030235</td><td> 1.220407</td></tr>\n",
+       "\t<tr><td>0.6127930</td><td>-0.777940</td></tr>\n",
+       "\t<tr><td>1.3737150</td><td> 1.102857</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 258 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " STG & PEG\\\\\n",
+       " <dbl{[},1{]}> & <dbl{[},1{]}>\\\\\n",
+       "\\hline\n",
+       "\t -1.765089 & -1.796705\\\\\n",
+       "\t -1.384627 &  1.729790\\\\\n",
+       "\t -1.479743 & -0.503657\\\\\n",
+       "\t ⋮ & ⋮\\\\\n",
+       "\t 0.8030235 &  1.220407\\\\\n",
+       "\t 0.6127930 & -0.777940\\\\\n",
+       "\t 1.3737150 &  1.102857\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 258 × 2\n",
+       "\n",
+       "| STG &lt;dbl[,1]&gt; | PEG &lt;dbl[,1]&gt; |\n",
+       "|---|---|\n",
+       "| -1.765089 | -1.796705 |\n",
+       "| -1.384627 |  1.729790 |\n",
+       "| -1.479743 | -0.503657 |\n",
+       "| ⋮ | ⋮ |\n",
+       "| 0.8030235 |  1.220407 |\n",
+       "| 0.6127930 | -0.777940 |\n",
+       "| 1.3737150 |  1.102857 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    STG       PEG      \n",
+       "1   -1.765089 -1.796705\n",
+       "2   -1.384627  1.729790\n",
+       "3   -1.479743 -0.503657\n",
+       "⋮   ⋮         ⋮        \n",
+       "256 0.8030235  1.220407\n",
+       "257 0.6127930 -0.777940\n",
+       "258 1.3737150  1.102857"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 145 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>STG</th><th scope=col>PEG</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl[,1]&gt;</th><th scope=col>&lt;dbl[,1]&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>-1.514278</td><td>-1.402003</td></tr>\n",
+       "\t<tr><td>-1.278485</td><td>-1.088498</td></tr>\n",
+       "\t<tr><td>-1.137009</td><td> 1.384706</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>1.126602</td><td>-0.4614885</td></tr>\n",
+       "\t<tr><td>1.598187</td><td> 0.4093578</td></tr>\n",
+       "\t<tr><td>1.692505</td><td>-0.7401593</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 145 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " STG & PEG\\\\\n",
+       " <dbl{[},1{]}> & <dbl{[},1{]}>\\\\\n",
+       "\\hline\n",
+       "\t -1.514278 & -1.402003\\\\\n",
+       "\t -1.278485 & -1.088498\\\\\n",
+       "\t -1.137009 &  1.384706\\\\\n",
+       "\t ⋮ & ⋮\\\\\n",
+       "\t 1.126602 & -0.4614885\\\\\n",
+       "\t 1.598187 &  0.4093578\\\\\n",
+       "\t 1.692505 & -0.7401593\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 145 × 2\n",
+       "\n",
+       "| STG &lt;dbl[,1]&gt; | PEG &lt;dbl[,1]&gt; |\n",
+       "|---|---|\n",
+       "| -1.514278 | -1.402003 |\n",
+       "| -1.278485 | -1.088498 |\n",
+       "| -1.137009 |  1.384706 |\n",
+       "| ⋮ | ⋮ |\n",
+       "| 1.126602 | -0.4614885 |\n",
+       "| 1.598187 |  0.4093578 |\n",
+       "| 1.692505 | -0.7401593 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    STG       PEG       \n",
+       "1   -1.514278 -1.402003 \n",
+       "2   -1.278485 -1.088498 \n",
+       "3   -1.137009  1.384706 \n",
+       "⋮   ⋮         ⋮         \n",
+       "143 1.126602  -0.4614885\n",
+       "144 1.598187   0.4093578\n",
+       "145 1.692505  -0.7401593"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "user_training <- user_training %>%\n",
+    "mutate(PEG = scale(PEG,center = TRUE),\n",
+    "       STG = scale(STG,center = TRUE))\n",
+    "user_training\n",
+    "\n",
+    "user_testing <- user_testing %>%\n",
+    "mutate(PEG = scale(PEG,center = TRUE),\n",
+    "       STG = scale(STG,center = TRUE))\n",
+    "user_testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "══ Workflow [trained] ══════════════════════════════════════════════════════════\n",
+       "\u001b[3mPreprocessor:\u001b[23m Recipe\n",
+       "\u001b[3mModel:\u001b[23m linear_reg()\n",
+       "\n",
+       "── Preprocessor ────────────────────────────────────────────────────────────────\n",
+       "0 Recipe Steps\n",
+       "\n",
+       "── Model ───────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "Call:\n",
+       "stats::lm(formula = V1 ~ ., data = data)\n",
+       "\n",
+       "Coefficients:\n",
+       "(Intercept)          STG  \n",
+       "  1.382e-17    2.064e-01  \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#create and assign the linear regression model specification to an object called lm_spec.\n",
+    "\n",
+    "lm_spec <- linear_reg() %>%\n",
+    "        set_engine(\"lm\") %>%\n",
+    "        set_mode(\"regression\")\n",
+    "\n",
+    "#create a recipe for the model and assign it called credit_recipe.\n",
+    "performance_recipe <- recipe(PEG~.,data=user_training)\n",
+    "\n",
+    "#fit our simple linear regression model by using the model specification and recipe.\n",
+    "performance_fit <- workflow() %>%\n",
+    "add_recipe(performance_recipe) %>%\n",
+    "add_model(lm_spec) %>%\n",
+    "fit(data = user_training)\n",
+    "\n",
+    "performance_fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the slopes and coefficients above from each of the predictors, we can get our prediction model here.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$student\\: performance = 0.3656 - 0.2505 \\times study\\: time$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.249233390042185"
+      ],
+      "text/latex": [
+       "0.249233390042185"
+      ],
+      "text/markdown": [
+       "0.249233390042185"
+      ],
+      "text/plain": [
+       "[1] 0.2492334"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Calculate the RMSE to assess goodness of fit on performance_fit\n",
+    "lm_rmse <- performance_fit %>%\n",
+    "        predict(user_training) %>%\n",
+    "        bind_cols(user_training) %>%\n",
+    "        metrics(truth = PEG ,estimate = .pred) %>%\n",
+    "        filter(.metric == \"rmse\") %>%\n",
+    "        select(.estimate) %>%\n",
+    "        pull()\n",
+    "lm_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.281095867238959"
+      ],
+      "text/latex": [
+       "0.281095867238959"
+      ],
+      "text/markdown": [
+       "0.281095867238959"
+      ],
+      "text/plain": [
+       "[1] 0.2810959"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Calculate the RMSPE to assess how well the model predicts on the testing data\n",
+    "lm_rmspe <- performance_fit %>%\n",
+    "        predict(user_testing) %>%\n",
+    "        bind_cols(user_testing) %>%\n",
+    "        metrics(truth = PEG ,estimate = .pred) %>%\n",
+    "        filter(.metric == \"rmse\") %>%\n",
+    "        select(.estimate) %>%\n",
+    "        pull()\n",
+    "lm_rmspe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3 K-NN Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.227341125012816"
+      ],
+      "text/latex": [
+       "0.227341125012816"
+      ],
+      "text/markdown": [
+       "0.227341125012816"
+      ],
+      "text/plain": [
+       "[1] 0.2273411"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.257479542809749"
+      ],
+      "text/latex": [
+       "0.257479542809749"
+      ],
+      "text/markdown": [
+       "0.257479542809749"
+      ],
+      "text/plain": [
+       "[1] 0.2574795"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Because we have set the seed at the beginning of the report, we don't need to set seed again.\n",
+    "# and the procedure is reproducible.\n",
+    "\n",
+    "#Scale and shift our predictors on the training data\n",
+    "\n",
+    "#create and assign the K-nn regression model specification to an object called performance_knn_recipe.\n",
+    "performance_knn_recipe <- recipe(PEG ~., data = user_training) %>%\n",
+    "                        step_center(all_predictors()) %>%\n",
+    "                        step_scale(all_predictors())\n",
+    "\n",
+    "performance_knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) %>%\n",
+    "                      set_engine(\"kknn\") %>%\n",
+    "                      set_mode(\"regression\")\n",
+    "\n",
+    "performance_vfold <- vfold_cv(user_training, v = 5, strata = PEG)\n",
+    "\n",
+    "performance_knn_workflow <- workflow() %>%\n",
+    "                        add_recipe(performance_knn_recipe) %>%\n",
+    "                        add_model(performance_knn_spec)\n",
+    "\n",
+    "gridvals <- tibble(neighbors = seq(1,20))\n",
+    "\n",
+    "performance_knn_results <- performance_knn_workflow %>%\n",
+    "                       tune_grid(resamples = performance_vfold, grid = gridvals) %>%\n",
+    "                       collect_metrics() \n",
+    "\n",
+    "#select the value of k resulting in best RMSE\n",
+    "kmin <- performance_knn_results %>%\n",
+    "               filter(.metric == 'rmse') %>%\n",
+    "               filter(mean == min(mean))  %>% \n",
+    "               pull(neighbors)\n",
+    "\n",
+    "#retrain the model using that final k, predict on held-out data\n",
+    "performance_spec_knn <- nearest_neighbor(weight_func = \"rectangular\", neighbors = kmin) %>%\n",
+    "  set_engine(\"kknn\") %>%\n",
+    "  set_mode(\"regression\")\n",
+    "\n",
+    "performance_fit_knn <- workflow() %>%\n",
+    "  add_recipe(performance_knn_recipe) %>%\n",
+    "  add_model(performance_spec_knn) %>%\n",
+    "  fit(data = user_training)\n",
+    "\n",
+    "knn_rmse <- performance_fit_knn %>%\n",
+    "  predict(user_training) %>%\n",
+    "  bind_cols(user_training) %>%\n",
+    "  metrics(truth = PEG, estimate = .pred)%>%\n",
+    "  filter(.metric == 'rmse') %>%\n",
+    "  pull(.estimate)\n",
+    "\n",
+    "knn_rmse\n",
+    "\n",
+    "knn_rmspe <- performance_fit_knn %>%\n",
+    "  predict(user_testing) %>%\n",
+    "  bind_cols(user_testing) %>%\n",
+    "  metrics(truth = PEG, estimate = .pred)%>%\n",
+    "  filter(.metric == 'rmse') %>%\n",
+    "  pull(.estimate) \n",
+    "\n",
+    "knn_rmspe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.Expected Outcomes and Significance"
    ]
   },
@@ -1091,6 +1497,20 @@
     "* How much time should a student be spending studying to improve exam performance?\n",
     "* How do other factors (such as repetition, knowledge level, etc.) contribute to exam performance?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
