--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -62,77 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘broom’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dials’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘infer’ was built under R version 4.0.3”\n",
-      "Warning message:\n",
-      "“package ‘modeldata’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘parsnip’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘recipes’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tune’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘workflows’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘yardstick’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘cowplot’ was built under R version 4.0.3”\n",
-      "Registered S3 method overwritten by 'GGally':\n",
-      "  method from   \n",
-      "  +.gg   ggplot2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(digest)\n",
@@ -162,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1079,152 +1011,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 258 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>STG</th><th scope=col>PEG</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl[,1]&gt;</th><th scope=col>&lt;dbl[,1]&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>-1.765089</td><td>-1.796705</td></tr>\n",
-       "\t<tr><td>-1.384627</td><td> 1.729790</td></tr>\n",
-       "\t<tr><td>-1.479743</td><td>-0.503657</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>0.8030235</td><td> 1.220407</td></tr>\n",
-       "\t<tr><td>0.6127930</td><td>-0.777940</td></tr>\n",
-       "\t<tr><td>1.3737150</td><td> 1.102857</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 258 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " STG & PEG\\\\\n",
-       " <dbl{[},1{]}> & <dbl{[},1{]}>\\\\\n",
-       "\\hline\n",
-       "\t -1.765089 & -1.796705\\\\\n",
-       "\t -1.384627 &  1.729790\\\\\n",
-       "\t -1.479743 & -0.503657\\\\\n",
-       "\t ⋮ & ⋮\\\\\n",
-       "\t 0.8030235 &  1.220407\\\\\n",
-       "\t 0.6127930 & -0.777940\\\\\n",
-       "\t 1.3737150 &  1.102857\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 258 × 2\n",
-       "\n",
-       "| STG &lt;dbl[,1]&gt; | PEG &lt;dbl[,1]&gt; |\n",
-       "|---|---|\n",
-       "| -1.765089 | -1.796705 |\n",
-       "| -1.384627 |  1.729790 |\n",
-       "| -1.479743 | -0.503657 |\n",
-       "| ⋮ | ⋮ |\n",
-       "| 0.8030235 |  1.220407 |\n",
-       "| 0.6127930 | -0.777940 |\n",
-       "| 1.3737150 |  1.102857 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "    STG       PEG      \n",
-       "1   -1.765089 -1.796705\n",
-       "2   -1.384627  1.729790\n",
-       "3   -1.479743 -0.503657\n",
-       "⋮   ⋮         ⋮        \n",
-       "256 0.8030235  1.220407\n",
-       "257 0.6127930 -0.777940\n",
-       "258 1.3737150  1.102857"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 145 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>STG</th><th scope=col>PEG</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl[,1]&gt;</th><th scope=col>&lt;dbl[,1]&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>-1.514278</td><td>-1.402003</td></tr>\n",
-       "\t<tr><td>-1.278485</td><td>-1.088498</td></tr>\n",
-       "\t<tr><td>-1.137009</td><td> 1.384706</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>1.126602</td><td>-0.4614885</td></tr>\n",
-       "\t<tr><td>1.598187</td><td> 0.4093578</td></tr>\n",
-       "\t<tr><td>1.692505</td><td>-0.7401593</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 145 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " STG & PEG\\\\\n",
-       " <dbl{[},1{]}> & <dbl{[},1{]}>\\\\\n",
-       "\\hline\n",
-       "\t -1.514278 & -1.402003\\\\\n",
-       "\t -1.278485 & -1.088498\\\\\n",
-       "\t -1.137009 &  1.384706\\\\\n",
-       "\t ⋮ & ⋮\\\\\n",
-       "\t 1.126602 & -0.4614885\\\\\n",
-       "\t 1.598187 &  0.4093578\\\\\n",
-       "\t 1.692505 & -0.7401593\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 145 × 2\n",
-       "\n",
-       "| STG &lt;dbl[,1]&gt; | PEG &lt;dbl[,1]&gt; |\n",
-       "|---|---|\n",
-       "| -1.514278 | -1.402003 |\n",
-       "| -1.278485 | -1.088498 |\n",
-       "| -1.137009 |  1.384706 |\n",
-       "| ⋮ | ⋮ |\n",
-       "| 1.126602 | -0.4614885 |\n",
-       "| 1.598187 |  0.4093578 |\n",
-       "| 1.692505 | -0.7401593 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "    STG       PEG       \n",
-       "1   -1.514278 -1.402003 \n",
-       "2   -1.278485 -1.088498 \n",
-       "3   -1.137009  1.384706 \n",
-       "⋮   ⋮         ⋮         \n",
-       "143 1.126602  -0.4614885\n",
-       "144 1.598187   0.4093578\n",
-       "145 1.692505  -0.7401593"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "user_training <- user_training %>%\n",
-    "mutate(PEG = scale(PEG,center = TRUE),\n",
-    "       STG = scale(STG,center = TRUE))\n",
-    "user_training\n",
-    "\n",
-    "user_testing <- user_testing %>%\n",
-    "mutate(PEG = scale(PEG,center = TRUE),\n",
-    "       STG = scale(STG,center = TRUE))\n",
-    "user_testing"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1233,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1249,11 +1035,11 @@
        "── Model ───────────────────────────────────────────────────────────────────────\n",
        "\n",
        "Call:\n",
-       "stats::lm(formula = V1 ~ ., data = data)\n",
+       "stats::lm(formula = ..y ~ ., data = data)\n",
        "\n",
        "Coefficients:\n",
        "(Intercept)          STG  \n",
-       "  1.382e-17    2.064e-01  \n"
+       "     0.3656       0.2505  \n"
       ]
      },
      "metadata": {},
@@ -1295,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
