--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -1011,6 +1011,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# user_training_scale <- user_training %>%\n",
+    "# mutate(PEG = scale(PEG,center = TRUE),\n",
+    "#        STG = scale(STG,center = TRUE),)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1069,14 +1080,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the slopes and coefficients above from each of the predictors, we can get our prediction model here.\n"
+    "Looking at the slopes and coefficients above from each of the predictors, we can get our prediction model here:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$student\\: performance = 0.3656 - 0.2505 \\times study\\: time$"
+    "student performance = 0.3656 - 0.2505 $\\times$ study time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating the RMSE to assess goodness of fit on performance_fit"
    ]
   },
   {
@@ -1104,7 +1122,7 @@
     }
    ],
    "source": [
-    "# Calculate the RMSE to assess goodness of fit on performance_fit\n",
+    "\n",
     "lm_rmse <- performance_fit %>%\n",
     "        predict(user_training) %>%\n",
     "        bind_cols(user_training) %>%\n",
@@ -1116,8 +1134,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating the RMSPE to assess how well the model predicts on the testing data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1165,6 @@
     }
    ],
    "source": [
-    "# Calculate the RMSPE to assess how well the model predicts on the testing data\n",
     "lm_rmspe <- performance_fit %>%\n",
     "        predict(user_testing) %>%\n",
     "        bind_cols(user_testing) %>%\n",
@@ -1155,7 +1179,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The RMSE of linear regression is 0.249.$\\newline$\n",
+    "The RMSPE of the linear regression is 0.281."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.3 K-NN Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because we have set the seed at the beginning of the report, we don't need to set seed again and the procedure is reproducible.\n",
+    "\n",
+    "Scaling and shifting our predictors on the training data\n",
+    "\n",
+    "Creating and assign the K-NN regression model specification to an object called performance_knn_recipe."
    ]
   },
   {
@@ -1201,12 +1244,6 @@
     }
    ],
    "source": [
-    "# Because we have set the seed at the beginning of the report, we don't need to set seed again.\n",
-    "# and the procedure is reproducible.\n",
-    "\n",
-    "#Scale and shift our predictors on the training data\n",
-    "\n",
-    "#create and assign the K-nn regression model specification to an object called performance_knn_recipe.\n",
     "performance_knn_recipe <- recipe(PEG ~., data = user_training) %>%\n",
     "                        step_center(all_predictors()) %>%\n",
     "                        step_scale(all_predictors())\n",
@@ -1225,15 +1262,79 @@
     "\n",
     "performance_knn_results <- performance_knn_workflow %>%\n",
     "                       tune_grid(resamples = performance_vfold, grid = gridvals) %>%\n",
-    "                       collect_metrics() \n",
-    "\n",
-    "#select the value of k resulting in best RMSE\n",
+    "                       collect_metrics() \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selecting the value of k resulting in best RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "kmin <- performance_knn_results %>%\n",
     "               filter(.metric == 'rmse') %>%\n",
     "               filter(mean == min(mean))  %>% \n",
-    "               pull(neighbors)\n",
+    "               pull(neighbors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retraining the model using that final k and predicting on held-out data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.227341125012816"
+      ],
+      "text/latex": [
+       "0.227341125012816"
+      ],
+      "text/markdown": [
+       "0.227341125012816"
+      ],
+      "text/plain": [
+       "[1] 0.2273411"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.257479542809749"
+      ],
+      "text/latex": [
+       "0.257479542809749"
+      ],
+      "text/markdown": [
+       "0.257479542809749"
+      ],
+      "text/plain": [
+       "[1] 0.2574795"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "\n",
-    "#retrain the model using that final k, predict on held-out data\n",
     "performance_spec_knn <- nearest_neighbor(weight_func = \"rectangular\", neighbors = kmin) %>%\n",
     "  set_engine(\"kknn\") %>%\n",
     "  set_mode(\"regression\")\n",
@@ -1260,6 +1361,14 @@
     "  pull(.estimate) \n",
     "\n",
     "knn_rmspe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The RMSE of K-NN regression is 0.227.$\\newline$\n",
+    "The RMSPE of K-NN linear regression is 0.257."
    ]
   },
   {
