--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -390,7 +390,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In regards to why we are only choosing one predictor, it would be extremely difficult (within the scope of this course) to plot the final results, since all of our variables/columns (except UNS) are numerical, and PEG (which is what we are trying to predict) is also numerical. "
+    "In regards to why we are only choosing one predictor, it would be extremely difficult (within the scope of this course) to plot the final results, since all of our variables/columns (except UNS) are numerical, and PEG (which is what we are trying to predict) is also numerical. \n",
+    "\n",
+    "We believe there to be a positive relationship between PEG and STG, since it is natural to assume that increasing the degree of study time would result in higher/better exam performance. As STG increases, so should PEG."
    ]
   },
   {
@@ -999,7 +1001,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To visualize our results, we will plot our predictions as a line using geom_smooth overlaid our testing data to see the relationship between the two. The x-axis will be STG, and the y-axis will be PEG."
+    "To visualize our results, we will plot our predictions as a line using geom_smooth overlaid our testing data to see the relationship between the two. The x-axis will be STG, and the y-axis will be PEG.\n",
+    "\n",
+    "To assess the accuracy, we will be calculating the Root Mean Squared Prediction Error (RMSPE) to see how well our model generalizes to future data. RMSPE is the square root of the difference between the observed and predicted value of the ith test observation, divided by the number of observations. This will indicate how well our model is able to predict on unseen data."
    ]
   },
   {
@@ -1099,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1126,6 @@
     }
    ],
    "source": [
-    "\n",
     "lm_rmse <- performance_fit %>%\n",
     "        predict(user_training) %>%\n",
     "        bind_cols(user_training) %>%\n",
@@ -1142,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The RMSE of linear regression is 0.249.$\\newline$\n",
+    "The RMSE of linear regression is 0.249.\n",
+    "\n",
     "The RMSPE of the linear regression is 0.281."
    ]
   },
@@ -1203,46 +1207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "0.227341125012816"
-      ],
-      "text/latex": [
-       "0.227341125012816"
-      ],
-      "text/markdown": [
-       "0.227341125012816"
-      ],
-      "text/plain": [
-       "[1] 0.2273411"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0.257479542809749"
-      ],
-      "text/latex": [
-       "0.257479542809749"
-      ],
-      "text/markdown": [
-       "0.257479542809749"
-      ],
-      "text/plain": [
-       "[1] 0.2574795"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "performance_knn_recipe <- recipe(PEG ~., data = user_training) %>%\n",
     "                        step_center(all_predictors()) %>%\n",
@@ -1274,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,22 +1260,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.227341125012816"
+       "0.226049440854205"
       ],
       "text/latex": [
-       "0.227341125012816"
+       "0.226049440854205"
       ],
       "text/markdown": [
-       "0.227341125012816"
+       "0.226049440854205"
       ],
       "text/plain": [
-       "[1] 0.2273411"
+       "[1] 0.2260494"
       ]
      },
      "metadata": {},
@@ -1317,16 +1284,16 @@
     {
      "data": {
       "text/html": [
-       "0.257479542809749"
+       "0.259436641690242"
       ],
       "text/latex": [
-       "0.257479542809749"
+       "0.259436641690242"
       ],
       "text/markdown": [
-       "0.257479542809749"
+       "0.259436641690242"
       ],
       "text/plain": [
-       "[1] 0.2574795"
+       "[1] 0.2594366"
       ]
      },
      "metadata": {},
@@ -1367,7 +1334,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The RMSE of K-NN regression is 0.227.$\\newline$\n",
+    "The RMSE of K-NN regression is 0.227.\n",
+    "\n",
     "The RMSPE of K-NN linear regression is 0.257."
    ]
   },
