--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -1091,7 +1091,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "student performance = 0.3656 - 0.2505 $\\times$ study time"
+    "student performance = 0.3656 - 0.2505 * study time"
    ]
   },
   {
