--- a/DSCI100_Group32_Report.ipynb
+++ b/DSCI100_Group32_Report.ipynb
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,8 +1033,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating and assign the linear regression model specification to an object called lm_spec.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lm_spec <- linear_reg() %>%\n",
+    "        set_engine(\"lm\") %>%\n",
+    "        set_mode(\"regression\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a recipe for the model and assign it called credit_recipe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "performance_recipe <- recipe(PEG~.,data=user_training)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fitting our simple linear regression model by using the model specification and recipe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1062,16 +1103,6 @@
     }
    ],
    "source": [
-    "#create and assign the linear regression model specification to an object called lm_spec.\n",
-    "\n",
-    "lm_spec <- linear_reg() %>%\n",
-    "        set_engine(\"lm\") %>%\n",
-    "        set_mode(\"regression\")\n",
-    "\n",
-    "#create a recipe for the model and assign it called credit_recipe.\n",
-    "performance_recipe <- recipe(PEG~.,data=user_training)\n",
-    "\n",
-    "#fit our simple linear regression model by using the model specification and recipe.\n",
     "performance_fit <- workflow() %>%\n",
     "add_recipe(performance_recipe) %>%\n",
     "add_model(lm_spec) %>%\n",
